--- a/pfe-frontend/tsconfig.json
+++ b/pfe-frontend/tsconfig.json
@@ -24,6 +24,10 @@
       "dom"
     ]
   },
+  "include": [
+    "src/**/*.ts",
+    "src/environments/environment.ts"
+  ],
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
